Infrastructure/k8s/shop-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopservice-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopservice
  template:
    metadata:
      labels:
        app: shopservice
    spec:
      containers:
        - name: shopservice
          image: ranga/shopservice:latest
