Infrastructure/k8s/shop.yaml
apiVersion: v1
kind: Pod
metadata:
  name: shopservice
spec:
  containers:
    - name: shopservice
      image: shoppinglist/shopservice:0.0.1
      imagePullPolicy: Never
