Infrastructure/k8s/list-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: listservice-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: listservice
  template:
    metadata:
      labels:
        app: listservice
    spec:
      containers:
        - name: listservice
          image: ranga/listservice
---
apiVersion: v1
kind: Service
metadata:
  name: listservice-srv
spec:
  selector:
    app: listservice
  ports:
    - name: listservice
      protocol: TCP
      port: 5000
      targetPort: 5000
