Infrastructure/k8s/list-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: listservice-srv
spec:
  type: NodePort
  selector: 
    app: listservice
  ports:
    - name: listservice
      protocol: TCP
      port: 5000
      targetPort: 5000
