Infrastructure/k8s/shop-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopservice-srv
spec:
  type: NodePort
  selector: 
    app: shopservice
  ports:
    - name: shopservice
      protocol: TCP
      port: 5002
      targetPort: 5002
