Infrastructure/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    
spec:
  rules:
    - host: web.shopping.com
      http:
        paths:
          - path: /auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: authservice-clusterip-srv
                port: 
                  number: 4999
          - path: /shops/?(.*)
            pathType: Prefix
            backend:
              service:
                name: listservice-clusterip-srv
                port: 
                  number: 5000
